# TaxAssist

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SYSTEM_ARCHITECTURE.md  deploy-cloudrun.ps1  pyproject.toml  requirements.txt  run_local.py  setup_auth.py  structure.txt  test_connection.py
.github/workflows/: ci.yml
app/: main.py  test_google_features.py
app/adk/: agent.py  test_agent.py  tools.py
app/api/: gateway.py  workflow_api.txt
app/core/: calendar_client.py  control_db.py  control_models.py  copywriter.py  db.py  db_initializer.py  document_registry.py  email_format.py  email_hitl.py  field_calculator.py  gmail_client.py  google_auth.py  identity.py  itr1_calculator.py  itr2_calculator.py  itr_json_export.py  itr_mapper.py  itr_service.py  mongo_mcp.py  ocr_extractor.py  pii_vault.py  privacy.py  sheet_exporter.py  sheets_client.py  state.py  state_tracker_service.py  tax_ledger.py  tax_rules.json  tax_rules.py  tenancy.py  workspace_gateway.py  workspace_orchestrator.py  write_policy.py
app/data/: tax_rules.json
app/engine/: agent_decider.py  agent_executor.py  decider.py
docs/: architecture.md  class_diagrams.md  sequence_diagrams.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mongodb-mcp/: Dockerfile
scripts/: check_tool_schema.py  setup_auth.py
src/: app.py  orchestrator.py  verify_orchestrator.py
tests/: __init__.py  test_document_mcp.py  test_interaction_mcp.py  test_orchestrator.py  test_state_mcp.py  test_workflow.py
(+136 files in other folders)
